# OBSBOT-linux

OBSBOT_Sample/: CMakeLists.txt  main.cpp
include/dev/: dev.hpp  devs.hpp
include/util/: comm.hpp
linux/arm64-release/: libdev.so.1.0.1
src/: main.cpp
